--- a/docs/decision_language/master05-dlm_model.adoc
+++ b/docs/decision_language/master05-dlm_model.adoc
@@ -61,9 +61,9 @@ The variable definitions found in the `input` section of a DLM are designed to f
 
 The class `STATE_VARIABLE<T>` models the simplest case: a variable that may be queried once for an execution run. This is sufficient for subject variables that are not time-dependent, and will not change during the execution, such as `date_of_birth`, `sex`, and Boolean variables such as `is_type1_diabetic`. The `_history_` attribute contains the variable value (normally only one sample), while the features `is_available()` and `unavailable_reason()` provide a way for missing data to be checked for.
 
-For time-varying variables, the values must usually be tracked. The class `TRACKED_STATE_VARIABLE<T>` is is provided for this purpose, and adds the meta-attribute `_currency_`, a duration indicating the maximum age of the sample value to be useful or valid. The `_history_` attribute now contains variable samples over time. The function `value()` extracts the most recent available value, while `is_available()` is redefined to indicate whether a sufficiently recent value is availale. 
+For time-varying variables, the values must usually be tracked. The class `TRACKED_STATE_VARIABLE<T>` is is provided for this purpose, and adds the meta-attribute `_currency_`, a duration indicating the maximum age of the sample value to be useful or valid. The `_history_` attribute now contains variable samples over time. The function `value()` extracts the most recent available value, while `is_available()` is redefined to indicate whether a sufficiently recent value is available. 
 
-Many tracked variables are quantitative, and for these, extra facilities are provided via the class `TRACKED_QUANTITATIVE_VARIABLE<T>`, which adds the 'ranges' facility described earlier in <<_variable_ranges>>.
+Many tracked variables are quantitative, and for these, extra facilities are provided via the class `TRACKED_QUANTITATIVE_VARIABLE<T>`, which adds the ranges facility described earlier in <<_quantitative_tracked_variables>>.
 
 Variable declarations in DL syntax, as described in the language section above are in fact instantiations of the `STATE_VARIABLE<T>` or a descendant, potentially with constructor paramaters supplied. Consider the following declaration, shown earlier:
 
