Non-semantic UML regeneration with missed property description.

--- a/docs/UML/classes/capture_dataset_spec.adoc
+++ b/docs/UML/classes/capture_dataset_spec.adoc
@@ -17,5 +17,5 @@ h|*Attributes*
 
 h|*0..1*
 |*commit_group*: `<<_dataset_commit_group_class,DATASET_COMMIT_GROUP>>`
-a|
+a|Optional information for multi-step form fill and commit interaction with the EHR.
 |===
