--- a/docs/UML/classes/plan_event.adoc
+++ b/docs/UML/classes/plan_event.adoc
@@ -3,7 +3,7 @@
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*__PLAN_EVENT<> (abstract)__*
+2+^h|*__PLAN_EVENT (abstract)__*
 
 h|*Description*
 2+a|Any kind of Event defined as part of a Plan definition.
@@ -16,10 +16,10 @@ h|*Attributes*
 ^h|*Meaning*
 
 h|*0..1*
-|*other_details*: `link:/releases/RM/{rm_release}/data_structures.html#_item_structure_class[ITEM_STRUCTURE^]`
-a|
-
-h|*0..1*
 |*delay*: `link:/releases/BASE/{base_release}/foundation_types.html#_iso8601_duration_class[Iso8601_duration^]`
 a|Optional delay to event generation.
+
+h|*0..1*
+|*other_details*: `link:/releases/RM/{rm_release}/data_structures.html#_item_structure_class[ITEM_STRUCTURE^]`
+a|Archetype-configurable extra meta-data for any event.
 |===
